Updated design documents with diagrams